--- a/freehaeyo/package.json
+++ b/freehaeyo/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@mantine/core": "^7.1.5",
     "@mantine/hooks": "^7.1.5",
+    "@recoiljs/refine": "^0.1.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
