--- a/freehaeyo/package.json
+++ b/freehaeyo/package.json
@@ -24,22 +24,25 @@
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "msw": "^2.0.9",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.0",
-    "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.0.3",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.54.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "msw": "^2.0.10",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.0.3",
     "vite": "^5.0.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
